# bookstore

./: .gitignore  Dockerfile  Procfile  docker-compose.yml  pyproject.toml  requirements.txt  text
.github/workflows/: build.yml  heroku-deploy.yml  workflow-pr.yml
bookstore/: settings.py  urls.py
order/: factories.py
order/migrations/: 0001_initial.py
order/models/: order.py
order/serializers/: order_serializer.py
order/tests/tests_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/migrations/: 0001_initial.py  0002_rename_categories_product_category.py  0003_alter_product_category.py
product/models/: __init__.py  category.py  product.py
product/serializers/: category_serializer.py  product_serializer.py
product/tests/test_serializers/: test_product_serializers.py
product/tests/tests_viewsets/: test_category_viewset.py  test_product_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
