[tool.poetry]
name = "bookstore"
version = "0.1.0"
description = "Bookstore API"
authors = ["Method_Kali <kerlesalves@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^5.2.7"
pytest = "^8.4.2"
factory-boy = "^3.3.3"
django-rest-framework = "^0.1.0"
django-extensions = "^4.1"
django-debug-toolbar = "^6.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
