[project]
name = "bookstore"
version = "0.1.0"
description = "Bookstore-API"
authors = [
    {name = "Method_Kali",email = "kerlesalves@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pytest (>=9.0.1,<10.0.0)",
    "factory-boy (>=3.3.3,<4.0.0)",
    "django (>=5.2.8,<6.0.0)",
    "django-rest-framework (>=0.1.0,<0.2.0)",
    "django-debug-toolbar (>=6.1.0,<7.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "autopep8 (>=2.3.2,<3.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "gitpython (>=3.1.45,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
